# sakapi-py

./: LICENSE  README.md  pyproject.toml
src/sakapi/: __main__.py  email.py  tg.py
