[build-system]
requires = ["pdm-backend >= 2.4.0"]
build-backend = "pdm.backend"

[project]
name = "sakapi"
version = "2.0.1"
authors = [
  { name="HiTECH Corporation", email="hitech.contact@gmail.com" },
]
description = "A module for using /Authkit API with Python."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/thaiminh0911/sakapi-py/"
Issues = "https://github.com/thaiminh0911/sakapi-py/issues"